# rhythm-genesis

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  midi-bridge.py
Assets/: Square.prefab  UniversalRenderPipelineGlobalSettings.asset
Assets/Scenes/: Main Scene.unity
Assets/Scripts/: backgroundScript.cs  lineScript.cs  noteBlockScript.cs
ProjectSettings/: ProjectSettings.asset
assets/music/: retro-game-arcade-short.mp3:Zone.Identifier
engine_make/: IrisEngine
src/: main.cpp
src/Bridge/: PythonBridge.cpp  PythonBridge.hpp
src/Game/: MainGame.cpp  MainGame.hpp  clair-de-lune.json  gameTest.json
src/Game/json/: clair-de-lune-chords.json  clair-de-lune-single.json  clair-de-lune.json  gameTest.json  moonlight-sonata.json  star.json
src/Python/: beatmap_parser.py
src/UI/: BeatMapEditor.cpp  BeatMapEditor.hpp  MainMenu.cpp  MainMenu.hpp  UIButton.hpp  UIElement.hpp  UIFileSelector.hpp  UILabel.hpp  UIManager.hpp  UIProgressBar.hpp  UIScrollableList.hpp  UISlider.hpp  UITextBox.hpp  UploadUI.cpp  UploadUI.hpp  WaveformViewer.cpp  WaveformViewer.hpp
